k8f/api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service-svc
  namespace: myapp
spec:
  type: NodePort
  selector:
    app: api-service
  ports:
    - port: 3000        # Service port (cluster internal)
      targetPort: 3000  # Container port
      nodePort: 30080   # External port on each node (optional)
